--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
             </div>
         </div>
     </div>
+    <small class="code">
+        <a href="https://github.com/Martinaroque/wheather-app" target="_blank">Open-source code</a>, by Martina Roque
+    </small>
 
     <script src="java/hora.js"></script>
 </body>
