--- a/index.html
+++ b/index.html
@@ -79,74 +79,27 @@
         </form>
     </div>
     <br />
+<div class="weather-forecast" id="forecast">
+<div class="row">
+<div class="col-2">
+    <div class="forescast-date">
+    thu
+</div>
+<div>
+    <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="" width="42px"/>
+</div>
+<div class="forecast-temp">
+    <span class="forescast-temp-max" >18º</span> 
+    <span class="forescast-temp-min">12º</span> 
+</div>
+</div>
 
+
+</div>
+
+
+</div>
  
-        <div class="row">
-            <div class="col">
-                <div class="card" width=30>
-                    <img src="imagens/chuva.PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Wednesday</h5>
-                        <div class="temperature">
-                            <p class="Wednesday">Min:10ºC </p>
-                            <p class="Wednesday_1">Max:16ºC</p>
-                        </div>
-                        <a href="#" class="btn btn-primary">More details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" width=40>
-                    <img src="imagens/nublado.PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Thursday</h5>
-                        <div class="temperature">
-                            <p class="Thursday">Min:11ºC </p>
-                            <p class="Thursday_1">Max:15ºC</p>
-                        </div>
-                        <a href="#" class="btn btn-primary">More details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" width=30>
-                    <img src="imagens/Sol.PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Friday</h5>
-                        <div class="temperature">
-                            <p class="Friday">Min:14ºC </p>
-                            <p class="Friday_1">Max:19ºC</p>
-                        </div>
-                        <a href="#" class="btn btn-primary">More details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" width=40>
-                    <img src="imagens/Sol.PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Saturday</h5>
-                        <div class="temperature">
-                            <p class="Saturday">Min:16ºC </p>
-                            <p class="Saturday_1">Max:24ºC</p>
-                        </div>
-                        <a href="#" class="btn btn-primary">More details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card" width=30>
-                    <img src="imagens/Sol.PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Sunday</h5>
-                        <div class="temperature">
-                            <p class="Sunday">Min:17ºC </p>
-                            <p class="Sunday_1">Max:25ºC</p>
-                        </div>
-                        <a href="#" class="btn btn-primary">More details</a>
-                    </div>
-                </div>
-            </div>
         </div>
         
 </div>
