--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 <div class="row">
 <div class="col-2">
     <div class="forescast-date">
-    thu
+    
 </div>
 <div>
-    <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="" width="42px"/>
+    <img src="" alt="" width="42px"/>
 </div>
 <div class="forecast-temp">
-    <span class="forescast-temp-max" >18º</span> 
-    <span class="forescast-temp-min">12º</span> 
+    <span class="forescast-temp-max" ></span> 
+    <span class="forescast-temp-min"></span> 
 </div>
 </div>
 
