--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
         </div>
         
 </div>
-    <small class="code">
-        <a href="https://github.com/Martinaroque/wheather-app" target="_blank">Open-source code</a>, by Martina Roque
-    </small>
+   <div className="coder mt-1">
+      <small>
+        <a href="https://github.com/Martinaroque">Open-source code</a> by
+        Martina Castro Roque
+      </small>
+    </div>
 
     <script src="java/hora.js"></script>
 </body>
